--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-    <h1>라이프 캘린더 입니다.</h1>
+    <h1 class="main-title">라이프 캘린더 입니다.</h1>
 </body>
 </html>
