레이아웃 수정

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-    <h1 class="main-title">라이프 캘린더 입니다.</h1>
+    <div id="container">
+        <h1 id="header"></h1>
+        <h1 id="sidebar"></h1>
+        <h1 id="main-content"></h1>
+        <h1 id="footer"></h1>
+    </div>
 </body>
 </html>
