--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="container">
-        <h1 id="header"></h1>
+        <h1 id="header"> hello world</h1>
         <h1 id="sidebar"></h1>
         <h1 id="main-content"></h1>
         <h1 id="footer"></h1>
