레이아웃 구성

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <div id="container">
-        <h1 id="header"> hello world</h1>
-        <h1 id="sidebar"></h1>
-        <h1 id="main-content"></h1>
-        <h1 id="footer"></h1>
+        <h1 id="header">header</h1>
+        <h1 id="sidebar">sidebar</h1>
+        <h1 id="main-contents">main-contents</h1>
+        <h1 id="footer">footer</h1>
     </div>
 </body>
 </html>
