기본 레이아웃 설계

--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-    <div id="container">
-        <h1 id="header">header</h1>
-        <h1 id="sidebar">sidebar</h1>
-        <h1 id="main-contents">main-contents</h1>
-        <h1 id="footer">footer</h1>
+    <header>header</header>
+
+    <div class="container">
+        <sidebar>sidebar</sidebar>
+        <main>main</main>
     </div>
+
+    <footer>footer</footer>
 </body>
 </html>
