--- a/Prototype_ver1.0.html
+++ b/Prototype_ver1.0.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Life Calendar</title>
+    <title>Life Calendar Sample</title>
     <style>
         /* CSS 코드 */
         body {
